# dbt-skillz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt_skillz/: __init__.py  cli.py  compiler.py  models.py
dbt_skillz/generators/: base.py  skill.py
dbt_skillz/parsers/: base.py  dbt.py
dbt_skillz/templates/: layer.md.j2  lineage.md.j2  macros.md.j2  skill_main.md.j2  sources.md.j2
tests/: __init__.py  conftest.py  test_cli.py  test_generator.py  test_parser.py
tests/fixtures/basic_project/: dbt_project.yml
tests/fixtures/basic_project/macros/: generate_alias_name.sql
tests/fixtures/basic_project/models/: sources.yml
tests/fixtures/basic_project/models/marts/: user_activity_report.sql  user_activity_report.yml
tests/fixtures/basic_project/models/staging/: stg_analytics__events.sql  stg_analytics__events.yml  stg_firestore__users.sql  stg_firestore__users.yml
