[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-skillz"
version = "0.1.0"
description = "Auto-generate Markdown documentation and skill metadata from dbt projects"
authors = [{ name = "Memex Team", email = "info@memex.ai" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Documentation",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/atlasfutures/dbt-skillz"
Issues = "https://github.com/atlasfutures/dbt-skillz/issues"
Repository = "https://github.com/atlasfutures/dbt-skillz.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "basedpyright>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=dbt_skillz --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "target", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["dbt_skillz"]
exclude = ["tests", "build", "dist", ".venv"]
reportMissingTypeStubs = "warning"
reportUnusedImport = "error"

[project.scripts]
dbt-skillz = "dbt_skillz.cli:cli"

[tool.setuptools.packages.find]
include = ["dbt_skillz*"]

[tool.setuptools.package-data]
"dbt_skillz" = ["templates/*.j2"]

[tool.uv]
package = true
